# json-protobuf-flatbuffers-benchmarks

./: LICENSE  README.md
c++/: CMakeLists.txt  README.md  benchmark.cpp  generate_cpp_files.sh
data/flatbuffers/: vector_data.fbs
data/proto/: vector_data.proto
go/: benchmark.go  generate_data_go_files.sh  go.mod  go.sum
go/vector_data_fbs/VectorDataFbs/: VectorData.go  VectorDataset.go
go/vector_data_fbs/flatbuf_vector_data/: VectorData.go  VectorDataset.go
go/vector_data_pb/: vector_data.pb.go
python/: VectorData.py  VectorDataset.py  benchmark.py  generate_python_files.sh  requirements.txt  vector_data_pb2.py
python/flatbuf/vector_data/: VectorData.py  VectorDataset.py
